# Lamina

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .linguist.yml  ACTIONS.md  CMakeLists.txt  CONTRIBUTING-CN.md  CONTRIBUTING-EN.md  README.md  RELEASE_TEST.md  TODO.md  TRADEMARKS.md  add_path_debug.bat  add_path_debug.sh  compile-cn.md  mingw-build.cmd  xmake.lua
.github/: README-Template.md  README.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  help_wanted.yml
.github/linguist/vendored grammars/: .tmLanguage.json
.github/workflows/: badges.yml  build.yml  ci.yml  comment_pr.yml  issue_management.yml  label.yml  pr_validation.yml  quality.yml  release.yml
docs/en_US/: CONTRIBUTING.md  Compile.md  PLUGIN_GUIDE.md  README.md
docs/zh_CN/: CLI.md  CONTRIBUTING.md  Compile.md  PLUGIN_GUIDE.md  wiki.md
docs/zh_TW/: CONTRIBUTING.md  Compile.md  PLUGIN_GUIDE.md  README.md
documents/: CONTRIBUTING-CN.md  PLUGIN_GUIDE.md  compile-en.md
examples/: be_included.lm  calculator.lm  cas.lm  include_other.lm  onestop.lm  quadratic.lm  string.lm  struct.lm  type.lm
examples/1.2.0/: new_feather.lm
examples/cpp_module_example/: CMakeLists.txt  ultra_minimal.cpp
extensions/: skel.lm
extensions/hello/: CMakeLists.txt  hello.cpp
extensions/json/: json.cpp  json.hpp  json_parser.hpp
extensions/lamina_extensions/first_lib/: hello.lm
extensions/minimal/: CMakeLists.txt  minimal.cpp  ultra_minimal.cpp
extensions/standard/: array.cpp  array.hpp  basic.cpp  cas.cpp  cas.hpp  complex.cpp  complex.hpp  complex_funcs.cpp  debugs.cpp  io.cpp  latex.hpp  lmStruct.cpp  lmStruct.hpp  lstruct.cpp  lstruct.hpp  math.cpp  random.cpp  random.hpp  range.cpp  range.hpp  sockets.cpp  sockets.hpp  standard.cpp  standard.hpp  std.hpp  stdio.cpp  string.cpp  string.hpp  times.cpp  times.hpp
extensions/type/: type.cpp  type.hpp
extensions/ultra_minimal/: CMakeLists.txt  ultra_minimal.cpp  xmake.lua
interpreter/: CMakeLists.txt  ast.hpp  bigint.hpp  color_style.cpp  color_style.hpp  complex_funcs.cpp  console_ui.cpp  console_ui.hpp  cpp_module_loader.hpp  error_reporter.hpp  eval.cpp  fraction.hpp  help_text.hpp.in  interpreter.cpp  interpreter.cpp.bak  interpreter.hpp  interpreter.md  irrational.hpp  lamina.hpp  lexer.cpp  lexer.hpp  lexer.hpp.new  main.cpp  module.cpp  module.hpp  module_api.hpp  module_loader.cpp  module_loader.hpp  new_parser.cpp  new_parser.hpp  parse_expr.cpp  parse_factor.cpp  parse_stmt.cpp  parser.cpp  parser.hpp  parser.old.cpp  parser_new.cpp  parser_old.cpp  rational.hpp  repl_input.cpp  (+7 more)
interpreter/examples/: calculator.lm  comparison_test.lm  debug_test.lm  debug_tokens.lm  defin.lm  hello.lm  json.lm  loop_control.lm  math_module.lm  math_test.lm  module_a.lm  module_b.lm  onestop.lm  plus.lm  quadratic.lm  robustness_test.lm  showcase.lm  simple_comparison.lm  simple_math.lm  simple_test.lm  string.lm  string_test.lm  test_circular.lm  test_module.lm  test_reimport.lm
interpreter/lamina_api/: bigint.hpp  lamina.hpp  rational.hpp  symbolic.cpp  symbolic.hpp  value.hpp
interpreter/obsolete/: parser.cpp.old  parser.hpp.old  rational.hpp.old
interpreter/resources/: help.txt
interpreter/utils/: color_style.cpp  color_style.hpp  error_reporter.hpp  properties_parser.hpp  repl_input.cpp  repl_input.hpp  src_manger.cpp  src_manger.hpp
scripts/: add_path.bat  add_path.sh
scripts/pygments/: lamina_lexer_debug.py
